# itsm-backend/docs/swagger.yaml
@@ -10971,7 +10971,8 @@ paths:
       - 问题管理
   /api/v1/problems/{id}/sla:
     get:
-      description: 获取问题SLA状态（当前问题暂未配置SLA，返回默认无SLA状态）
+      description: 问题域尚未接入 SLA 引擎（sla_policy 支持 problem 类型，但没有任何代码为 problem 建立 sla_state），因此固定返回
+        5003 unready；此前它返回 slaStatus:"none" 的空成功，与「该问题确实没有触发 SLA」不可区分
       parameters:
       - description: 问题ID
         in: path
@@ -10981,17 +10982,12 @@ paths:
       produces:
       - application/json
       responses:
-        "200":
-          description: OK
-          schema:
-            allOf:
-            - $ref: '#/definitions/common.Response'
-            - properties:
-                data:
-                  type: object
-              type: object
         "400":
           description: Bad Request
+          schema:
+            $ref: '#/definitions/common.Response'
+        "401":
+          description: Unauthorized
           schema:
             $ref: '#/definitions/common.Response'
         "404":
@@ -11000,6 +10996,10 @@ paths:
             $ref: '#/definitions/common.Response'
         "500":
           description: Internal Server Error
+          schema:
+            $ref: '#/definitions/common.Response'
+        "503":
+          description: Service Unavailable
           schema:
             $ref: '#/definitions/common.Response'
       security:
